# cpprun

./: .cmake-format  CMakeLists.txt  README.md
.github/workflows/: cpp-build-and-test.yaml
apps/cpprun/: CMakeLists.txt
apps/cpprun/src/: main.cpp
cmake/: dependencies.cmake
debian/: README.Debian  README.source  changelog  control  copyright  cpprun.cron.d.ex  cpprun.doc-base.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/upstream/: metadata.ex
doc/: create.md  delete.md  exec.md  kill.md  list.md  start.md  state.md
docs/: create.md  delete.md  exec.md  features.md  kill.md  list.md  run.md  start.md  state.md
include/cxx_oci_spec/: config.hpp  state.hpp  verified_config.hpp
lib/: CMakeLists.txt
lib/cxx_oci_spec/: capabilities.cpp  capabilities.hpp  config.cpp  default_logger.cpp  private_common.hpp  rlimits.cpp  rlimits.hpp  verified_config.cpp  verify_helper.cpp  verify_helper.hpp
src/: CMakeLists.txt  commands.cpp  commands.hpp  config.hpp.in  default_logger.cpp  help.cpp  help.hpp.in  main.cpp  private_common.hpp  reexec.cpp  reexec.hpp
src/cpprun/: cli.cpp  cli.hpp  configure.hpp.in  cpprun.cpp  cpprun.hpp  documents.hpp.in  exception.cpp  exception.hpp  json_printer.cpp  json_printer.hpp  paths.hpp  printer.cpp  printer.hpp  text_printer.cpp  text_printer.hpp
test/: CMakeLists.txt
test/data/: example.json  minimal-for-start-config.json
test/oci_spec/: config_basic.cpp  config_example.cpp  config_mount.cpp  config_namespaces.cpp  config_ociVersion.cpp  config_process.cpp  config_resources.cpp  config_test.cpp  config_test.hpp
tools/: iwyu.sh
